# LearnSherpa_AI

./: README.md  app.py  chainlit.md  pyproject.toml  requirements.txt  trained_agents_data.pkl  training_data.pkl
reports/: finance_report_20241002_104757.txt  finance_report_20241002_110122.txt  finance_report_20241003_125852.txt  finance_report_20241003_131327.txt  finance_report_latest.txt  history_report_20241021_164230.txt  history_report_20241021_165706.txt  history_report_latest.txt  nutrition_report_20241021_171000.txt  nutrition_report_20241021_173657.txt  physics_report_20240830_130953.md  physics_report_20240903_101633.md  productivity_report_20240906_113032.md  productivity_report_latest.txt  psychology_report_20241021_174514.txt  psychology_report_20241021_175437.txt  psychology_report_latest.txt  sociology_report_20240903_103808.md  sociology_report_20240903_103808.txt
src/: unified_chainlit_app.py
src/agent_books_v1/: crew.py  main.py  report.md  test_things.py  test_tools_2.py
src/agent_books_v1/config/: agents.yaml  tasks.yaml
src/agent_books_v1/tools/: BookReviewTool.py  RedditOpinionSearch.py  custom_tool.py  searcher_tool.py
src/learnsherpa_ai/: book-infographic.tsx  chainlit_app.py  crew.py  main.py  test_things.py
src/learnsherpa_ai/config/: tasks.yaml
src/rag_reports/: chainlit_app_report.py  chat_interface.py  populate_db.py  read_reports.py  vector_db.py
tmp_reports/: goodreads_report.txt  reddit_report.txt
