[tool.poetry]
name = "learnsherpa_ai"
version = "0.1.0"
description = "LearnSherpa_AI using crewAI"
authors = ["Manel Soler <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
learnsherpa_ai = "learnsherpa_ai.main:run"
train = "learnsherpa_ai.main:train"
replay = "learnsherpa_ai.main:replay"
test = "learnsherpa_ai.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
